# smart_splash_kit

./: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/me/smart_splash_kit/: SmartSplashKitPlugin.kt
android/src/test/kotlin/com/me/smart_splash_kit/: SmartSplashKitPluginTest.kt
example/: README.md  pubspec.yaml
example/android/: local.properties
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
example/android/app/src/main/kotlin/com/me/smart_splash_kit_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/web/: index.html  manifest.json
ios/: smart_splash_kit.podspec
ios/smart_splash_kit/: Package.swift
ios/smart_splash_kit/Sources/smart_splash_kit/: SmartSplashKitPlugin.swift
lib/: smart_splash_kit.dart  smart_splash_kit_platform_interface.dart  smart_splash_kit_web.dart  smart_splash_widget.dart
lib/animation/: splash_animation.dart
lib/config/: splash_config.dart  splash_config_parser.dart
lib/core/: splash_controller.dart  splash_router.dart
lib/loader/: api_loader.dart
lib/theme/: splash_theme.dart
lib/ui/: splash_layout.dart  splash_widgets.dart
linux/: CMakeLists.txt  smart_splash_kit_plugin.cc  smart_splash_kit_plugin_private.h
linux/include/smart_splash_kit/: smart_splash_kit_plugin.h
linux/test/: smart_splash_kit_plugin_test.cc
macos/: smart_splash_kit.podspec
macos/smart_splash_kit/: Package.swift
macos/smart_splash_kit/Sources/smart_splash_kit/: SmartSplashKitPlugin.swift
test/: smart_splash_kit_test.dart
windows/: CMakeLists.txt  smart_splash_kit_plugin.cpp  smart_splash_kit_plugin.h  smart_splash_kit_plugin_c_api.cpp
windows/include/smart_splash_kit/: smart_splash_kit_plugin_c_api.h
windows/test/: smart_splash_kit_plugin_test.cpp
